deploy/environments/local/workloads/rabbitmq/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rabbitmq
  namespace: rabbitmq
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: propertea-gateway
      namespace: kube-system
  hostnames:
    - rabbitmq.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: rabbitmq
          port: 15672
          weight: 1
